<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter_three_list">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chapter_three"
                android:text="@string/chapter_three"
                android:textColor="#000"
                android:fontFamily="@font/kalpurush_ansi_regular"
                android:textSize="25sp"
                android:gravity="center"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/chapter_three"
                android:fontFamily="@font/kalpurush_ansi_regular"
                android:text="@string/Three"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:padding="5dp"/>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="50dp"
            android:padding="10dp">


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"

                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/three_one"
                    android:background="@drawable/design2"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/innercover"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_one"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>












            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"

                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/three_two"
                    android:background="@drawable/design2"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/innercover"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_two"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>












            </androidx.cardview.widget.CardView>






        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="50dp"
            android:padding="10dp">


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/three_three"
                    android:background="@drawable/design2"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/innercover"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_three"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>












            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/three_four"
                    android:background="@drawable/design2"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/innercover"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_four"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>












            </androidx.cardview.widget.CardView>






        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:padding="10dp"
            >


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/three_five"
                    android:background="@drawable/design2"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/innercover"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_five"
                        android:layout_marginBottom="15dp"

                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>












            </androidx.cardview.widget.CardView>






        </LinearLayout>






    </LinearLayout>

</ScrollView>