<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapterFour">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chapter_four"
                android:text="@string/chapter_four"
                android:textColor="#000"
                android:fontFamily="@font/kalpurush_ansi_regular"
                android:textSize="25sp"
                android:gravity="center"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/chapter_four"
                android:fontFamily="@font/kalpurush_ansi_regular"
                android:text="@string/Four"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:padding="5dp"/>



        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            >


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="40dp"

                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/four_one"
                    android:background="@drawable/design2"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/innercover"
                        android:layout_margin="25dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four_one"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="40dp"

                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/four_two"
                    android:background="@drawable/design2"

                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="25dp"
                        android:src="@drawable/innercover"
                        android:padding="0dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four_two"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>




            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="10dp"
            android:gravity="center"

            >


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"

                app:cardCornerRadius="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:id="@+id/four_three"
                    android:background="@drawable/design2"
                    >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/innercover"
                        android:layout_margin="25dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four_three"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/kalpurush_ansi_regular"
                        android:textColor="#000"/>





                </LinearLayout>












            </androidx.cardview.widget.CardView>









        </LinearLayout>



    </LinearLayout>



</ScrollView>